sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: Double.type does not take parameters
  var ecart = Double(getValueCount())
                    ^AlgCombSort:9: error: not found: value i
    i = 0
    ^AlgCombSort:11: error: not found: value i
    while (i+ecart<getValueCount()) {
           ^AlgCombSort:12: error: not found: value i
      if (getValue(i)>getValue(i+ecart)) {
                   ^AlgCombSort:12: error: not found: value i
      if (getValue(i)>getValue(i+ecart)) {
                               ^AlgCombSort:13: error: not found: value i
        swap(i,i+ecart)
             ^AlgCombSort:13: error: not found: value i
        swap(i,i+ecart)
               ^AlgCombSort:16: error: not found: value i
      i+=1
      ^